--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,18 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
 
+    //Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
+
+    //okhttp
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
+
+    //Couroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0-M1'
+    implementation 'ru.gildor.coroutines:kotlin-coroutines-retrofit:0.12.0'
+    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+
+
 }
