--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".GadsLeaderBoardApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".GadsLeaderBoardApp"
         android:theme="@style/AppTheme">
-        <activity android:name=".leaderBoard.LeaderBoardActivity"></activity>
+        <activity android:name=".SubmitActivity"></activity>
+        <activity android:name=".leaderBoard.LeaderBoardActivity" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
